mcp_build_output.txt

Running MCP Builder Example: jsonplaceholder

================================================================================
Creating E2B sandbox with MCP servers...
  GitHub MCP server configured
  Notion MCP server configured
  Sandbox created (ID: iyg30sultg3galqg3km2n)
  E2B API key detected (e2b_...3461)
  Verifying sandbox command channel...
  Sandbox command channel verified
  Created 8 E2B sandbox tools
  Added 5 MCP builder tools
  Configuring Claude CLI with MCP gateway...
  Claude CLI configured with MCP gateway
  Loading MCP tools via langchain-mcp-adapters...
  Loaded 68 MCP tools via langchain-mcp-adapters
Initializing deep agent...
  Deep agent initialized with E2B tools

Task: 
Build a custom MCP server for the JSONPlaceholder API and demonstrate using it.

STEP 1 - SCAFFOLD:
Create an MCP server named 'jsonplaceholder' for the API at https://jsonplaceholder.typicode.com

STEP 2 - ADD TOOLS:
Add the following tools to the MCP server:

Tool 1: get_posts
- Description: "Fetch all posts from JSONPlaceholder"
- Parameters: {"type": "object", "properties": {"limit": {"type": "integer", "description": "Max posts to return"}}, "required": []}
- Implementation:
```python
import httpx
limit = arguments.get("limit", 10)
async with httpx.AsyncClient() as client:
    response = await client.get("https://jsonplaceholder.typicode.com/posts")
    posts = response.json()[:limit]
    return [TextContent(type="text", text=f"Retrieved {len(posts)} posts: {posts}")]
```

Tool 2: get_post
- Description: "Fetch a specific post by ID"
- Parameters: {"type": "object", "properties": {"post_id": {"type": "integer", "description": "Post ID"}}, "required": ["post_id"]}
- Implementation:
```python
import httpx
post_id = arguments.get("post_id")
async with httpx.AsyncClient() as client:
    response = await client.get(f"https://jsonplaceholder.typicode.com/posts/{post_id}")
    post = response.json()
    return [TextContent(type="text", text=f"Post {post_id}: {post}")]
```

Tool 3: get_user
- Description: "Fetch user information by ID"
- Parameters: {"type": "object", "properties": {"user_id": {"type": "integer", "description": "User ID"}}, "required": ["user_id"]}
- Implementation:
```python
import httpx
user_id = arguments.get("user_id")
async with httpx.AsyncClient() as client:
    response = await client.get(f"https://jsonplaceholder.typicode.com/users/{user_id}")
    user = response.json()
    return [TextContent(type="text", text=f"User {user_id}: {user}")]
```

STEP 3 - TEST:
Test the MCP server by calling 'get_posts' with limit=3

STEP 4 - DEPLOY:
Deploy the MCP server in local mode

STEP 5 - LIST:
Use list_mcp_servers to confirm the server is available

STEP 6 - REPORT:
Provide a summary of what was built and how to use it.


================================================================================

Closing E2B sandbox...
  Resources cleaned up
  Releasing MCP client
Traceback (most recent call last):
  File "C:\Users\chris\e2b-mcp-py\example_mcp_builder.py", line 166, in <module>
    examples[example_name]()
    ~~~~~~~~~~~~~~~~~~~~~~^^
  File "C:\Users\chris\e2b-mcp-py\example_mcp_builder.py", line 84, in example_build_jsonplaceholder_mcp
    result = agent.invoke(task)
  File "C:\Users\chris\e2b-mcp-py\deep_agent.py", line 223, in invoke
    response = self.agent.invoke({"messages": [{"role": "user", "content": task}]})
  File "c:\Users\chris\e2b-mcp-py\.venv\Lib\site-packages\langgraph\pregel\main.py", line 3050, in invoke
    for chunk in self.stream(
                 ~~~~~~~~~~~^
        input,
        ^^^^^^
    ...<10 lines>...
        **kwargs,
        ^^^^^^^^^
    ):
    ^
  File "c:\Users\chris\e2b-mcp-py\.venv\Lib\site-packages\langgraph\pregel\main.py", line 2633, in stream
    for _ in runner.tick(
             ~~~~~~~~~~~^
        [t for t in loop.tasks.values() if not t.writes],
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    ...<2 lines>...
        schedule_task=loop.accept_push,
        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    ):
    ^
  File "c:\Users\chris\e2b-mcp-py\.venv\Lib\site-packages\langgraph\pregel\_runner.py", line 167, in tick
    run_with_retry(
    ~~~~~~~~~~~~~~^
        t,
        ^^
    ...<10 lines>...
        },
        ^^
    )
    ^
  File "c:\Users\chris\e2b-mcp-py\.venv\Lib\site-packages\langgraph\pregel\_retry.py", line 42, in run_with_retry
    return task.proc.invoke(task.input, config)
           ~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^
  File "c:\Users\chris\e2b-mcp-py\.venv\Lib\site-packages\langgraph\_internal\_runnable.py", line 656, in invoke
    input = context.run(step.invoke, input, config, **kwargs)
  File "c:\Users\chris\e2b-mcp-py\.venv\Lib\site-packages\langgraph\_internal\_runnable.py", line 400, in invoke
    ret = self.func(*args, **kwargs)
  File "c:\Users\chris\e2b-mcp-py\.venv\Lib\site-packages\langgraph\prebuilt\tool_node.py", line 727, in _func
    outputs = list(
        executor.map(self._run_one, tool_calls, input_types, tool_runtimes)
    )
  File "C:\Users\chris\AppData\Local\Programs\Python\Python313\Lib\concurrent\futures\_base.py", line 619, in result_iterator
    yield _result_or_cancel(fs.pop())
          ~~~~~~~~~~~~~~~~~^^^^^^^^^^
  File "C:\Users\chris\AppData\Local\Programs\Python\Python313\Lib\concurrent\futures\_base.py", line 317, in _result_or_cancel
    return fut.result(timeout)
           ~~~~~~~~~~^^^^^^^^^
  File "C:\Users\chris\AppData\Local\Programs\Python\Python313\Lib\concurrent\futures\_base.py", line 456, in result
    return self.__get_result()
           ~~~~~~~~~~~~~~~~~^^
  File "C:\Users\chris\AppData\Local\Programs\Python\Python313\Lib\concurrent\futures\_base.py", line 401, in __get_result
    raise self._exception
  File "C:\Users\chris\AppData\Local\Programs\Python\Python313\Lib\concurrent\futures\thread.py", line 59, in run
    result = self.fn(*self.args, **self.kwargs)
  File "c:\Users\chris\e2b-mcp-py\.venv\Lib\site-packages\langchain_core\runnables\config.py", line 546, in _wrapped_fn
    return contexts.pop().run(fn, *args)
           ~~~~~~~~~~~~~~~~~~^^^^^^^^^^^
  File "c:\Users\chris\e2b-mcp-py\.venv\Lib\site-packages\langgraph\prebuilt\tool_node.py", line 957, in _run_one
    content = _handle_tool_error(e, flag=self._handle_tool_errors)
  File "c:\Users\chris\e2b-mcp-py\.venv\Lib\site-packages\langgraph\prebuilt\tool_node.py", line 404, in _handle_tool_error
    content = flag(e)  # type: ignore [assignment, call-arg]
  File "c:\Users\chris\e2b-mcp-py\.venv\Lib\site-packages\langgraph\prebuilt\tool_node.py", line 361, in _default_handle_tool_errors
    raise e
  File "c:\Users\chris\e2b-mcp-py\.venv\Lib\site-packages\langgraph\prebuilt\tool_node.py", line 951, in _run_one
    return self._wrap_tool_call(tool_request, execute)
           ~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^
  File "c:\Users\chris\e2b-mcp-py\.venv\Lib\site-packages\deepagents\middleware\filesystem.py", line 885, in wrap_tool_call
    tool_result = handler(request)
  File "c:\Users\chris\e2b-mcp-py\.venv\Lib\site-packages\langgraph\prebuilt\tool_node.py", line 947, in execute
    return self._execute_tool_sync(req, input_type, config)
           ~~~~~~~~~~~~~~~~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^^^^
  File "c:\Users\chris\e2b-mcp-py\.venv\Lib\site-packages\langgraph\prebuilt\tool_node.py", line 891, in _execute_tool_sync
    content = _handle_tool_error(e, flag=self._handle_tool_errors)
  File "c:\Users\chris\e2b-mcp-py\.venv\Lib\site-packages\langgraph\prebuilt\tool_node.py", line 404, in _handle_tool_error
    content = flag(e)  # type: ignore [assignment, call-arg]
  File "c:\Users\chris\e2b-mcp-py\.venv\Lib\site-packages\langgraph\prebuilt\tool_node.py", line 361, in _default_handle_tool_errors
    raise e
  File "c:\Users\chris\e2b-mcp-py\.venv\Lib\site-packages\langgraph\prebuilt\tool_node.py", line 844, in _execute_tool_sync
    response = tool.invoke(call_args, config)
  File "c:\Users\chris\e2b-mcp-py\.venv\Lib\site-packages\langchain_core\tools\base.py", line 598, in invoke
    return self.run(tool_input, **kwargs)
           ~~~~~~~~^^^^^^^^^^^^^^^^^^^^^^
  File "c:\Users\chris\e2b-mcp-py\.venv\Lib\site-packages\langchain_core\tools\base.py", line 907, in run
    raise error_to_raise
  File "c:\Users\chris\e2b-mcp-py\.venv\Lib\site-packages\langchain_core\tools\base.py", line 873, in run
    response = context.run(self._run, *tool_args, **tool_kwargs)
  File "c:\Users\chris\e2b-mcp-py\.venv\Lib\site-packages\langchain_core\tools\structured.py", line 90, in _run
    return self.func(*args, **kwargs)
           ~~~~~~~~~^^^^^^^^^^^^^^^^^
  File "C:\Users\chris\e2b-mcp-py\mcp_builder_tools.py", line 324, in test_mcp_server
    syntax_result = tools_instance.sandbox.commands.run(
        f"python3 -m py_compile {server_path}/server.py",
        timeout=10,
    )
  File "c:\Users\chris\e2b-mcp-py\.venv\Lib\site-packages\e2b\sandbox_sync\commands\command.py", line 233, in run
    else proc.wait(
         ~~~~~~~~~^
        on_stdout=on_stdout,
        ^^^^^^^^^^^^^^^^^^^^
        on_stderr=on_stderr,
        ^^^^^^^^^^^^^^^^^^^^
    )
    ^
  File "c:\Users\chris\e2b-mcp-py\.venv\Lib\site-packages\e2b\sandbox_sync\commands\command_handle.py", line 133, in wait
    raise CommandExitException(
    ...<4 lines>...
    )
e2b.sandbox.commands.command_handle.CommandExitException: Command exited with code 1 and error:
Sorry: IndentationError: expected an indented block (server.py, line 106)

During task with name 'tools' and id '7d4c9baa-29f9-e386-143d-53308707e2ce'
